<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_without_border"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/logoImage">


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/sharp_sans_bold"
                android:text="@string/txt_auth_sign_in"
                android:textColor="@color/gray_title"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvSignInDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/sharp_sans_medium"
                android:text="@string/txt_auth_sign_in_decs"
                android:textColor="@color/gray_title"
                android:textSize="@dimen/_9sdp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_white_with_gray_border"
                android:fontFamily="@font/sharp_sans_reg"
                android:gravity="center|left"
                android:hint="@string/txt_auth_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_hint"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_white_with_gray_border"
                android:fontFamily="@font/sharp_sans_reg"
                android:gravity="center|left"
                android:hint="@string/txt_auth_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_hint"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/sharp_sans_medium"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_auth_forgot_pass"
                android:textColor="@color/app_default_color"
                android:textSize="@dimen/_9sdp" />

            <Button
                android:id="@+id/btnSignIn"
                style="@style/BgButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/txt_auth_sign_in" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>