<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:id="@+id/rlBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/color_gray_more_lighter">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tvMedicineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/sharp_sans_bold"
                android:text="@string/txt_auth_forgot_pass_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_7sdp"
                android:background="@drawable/ic_cross_png"
                android:backgroundTint="@color/white" />

            <RelativeLayout
                android:id="@+id/rlNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlHeader"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_white_with_gray_border"
                android:fontFamily="@font/sharp_sans_reg"
                android:gravity="center|left"
                android:hint="@string/txt_auth_email_hint"
                android:inputType="textEmailAddress"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:maxLines="1"
                android:paddingLeft="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_hint"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:id="@+id/btnReset"
                style="@style/BgButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/etEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/sharp_sans_medium"
                android:text="@string/txt_reset"
                android:textSize="@dimen/_10sdp" />


        </RelativeLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>