<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:id="@+id/rlBg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:layout_centerInParent="true"
        android:background="@color/color_gray_more_lighter">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tvMedicineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/sharp_sans_bold"
                android:text="@string/txt_reschedule_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_7sdp"
                android:background="@drawable/ic_cross_png"
                android:backgroundTint="@color/white" />

            <RelativeLayout
                android:id="@+id/rlNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:visibility="visible" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/rlBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnReschedule"
            android:layout_below="@+id/rlHeader"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:fontFamily="@font/sharp_sans_reg"
                    android:text="@string/txt_date"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/_10sdp" />


                <RelativeLayout
                    android:id="@+id/rlDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/bg_white_with_gray_border">

                    <TextView
                        android:id="@+id/tvDateValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/sharp_sans_reg"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="28/10/2019"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAvailableSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                </androidx.recyclerview.widget.RecyclerView>


                <TextView
                    android:id="@+id/tvSomethingWrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/sharp_sans_medium"
                    android:gravity="center"
                    android:text="@string/txt_no_result_found"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/_6sdp"
                    android:visibility="gone" />

            </RelativeLayout>


        </LinearLayout>


        <Button
            android:id="@+id/btnReschedule"
            style="@style/BgButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/sharp_sans_medium"
            android:text="@string/txt_reschedule_title"
            android:textSize="@dimen/_10sdp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>